# flappy-rl

./: .gitignore  ENV_INSTRUCTIONS.md  README.md  pyproject.toml  resources
docs/: blog.md  blog2.md  env-checklist.md  env-instructions.md  mr-driller-spec.md  pufferlib-game-scouting.md  rl-basics.md
scripts/: eval_all_checkpoints.py
src/curly_succotash/: __init__.py  __main__.py  env.py  train.py
src/curly_succotash/flappy/: Makefile  README.md  __init__.py  binding.c  flappy.h  flappy.py
src/flappy_rl/: __init__.py  __main__.py  env.py  run_eval_flappy.py  sweep.py  train.py
src/flappy_rl/flappy/: Makefile  README.md  __init__.py  binding.c  flappy.h  flappy.py
variations/: README.md  __init__.py
variations/flappy/: Makefile  README.md  __init__.py  binding.c  curriculum.py  env_binding.h  eval_last_checkpoints.py  flappy.h  flappy.py  run_eval.py  run_random_render.py
