[project]
name = "curly-succotash"
version = "0.1.0"
description = "First RL env for PufferLib"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pufferlib",
    "gymnasium",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/curly_succotash"]
